CSS fixes
Lists have too much margin before and after. Move edit link to title

--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,12 @@ body {
 }
 /* TEXT */
 
+/* Make lists not behave weirdly */
+ul{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 #title a {
     color: rgb(38, 38, 38);
 }
